fix misaligned alteration button positions

--- a/src/styles/music_circle.scss
+++ b/src/styles/music_circle.scss
@@ -209,3 +209,10 @@
     left: -0.3em;
   }
 }
+
+@media (min-width: 768px) {
+  .alteration-button {
+    position: relative;
+    top: 1.5em;
+  }
+}
